Aenderungen waehrend der Aufnahme

--- a/css/styles-fixed.css
+++ b/css/styles-fixed.css
@@ -13,6 +13,7 @@ header {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  flex-wrap: wrap;
   z-index: 3;
 }
 #sidebar {
@@ -320,7 +321,7 @@ h2 {
   height: 1.5em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+@media (prefers-reduced-motion) {
   html {
     scroll-behavior: smooth;
   }
